2009-01-29  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c
	(foreach_managed_folder):
	(tny_camel_store_account_remove_folder_actual): perform a
	weak_unref when the account is disposed or the managed folder is
	removed

2009-01-28  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	imap_store->namespace should always own a copy of the string, to
	avoid some double frees causing crashes.

2009-01-27  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c
	(tny_camel_store_account_delete_cache_default): fixes a crash when
	deleting the cache of an account that does not have a CamelStore
	yet

2009-01-23  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c (deleter): Remove
	the children of a folder whenever it is deleted

2009-01-20  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c:
	on creating new items (ie. after creating a new folder, don't add
	the account name in the full path).

2009-01-15  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c
	(tny_gtk_folder_list_store_remove): remove folders that
	belong to the account that is being removed

2009-01-14  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	added a missing connect_unlock in imap_connect_online, when auth
	failed.

2009-01-09  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-account.c: initialize properly some 
	variables, and also free properly some vars (to avoid leaks). 
	Patch contributed by Qasim Ahmad.

	* libtinymail-camel/tny-camel-folder.c: leak fix in TnyCamelFolder
	copy_shared implementation (contributed by Qashim Ahmad).

2009-01-08  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c: