@@ -1,6 +1,12 @@
 2009-01-29  Sergio Villar Senin  <svillar@igalia.com>
 
 	* libtinymail-camel/tny-camel-store-account.c
+	(tny_camel_store_account_dispose): added a NULL check
+
+	* libtinymailui-gtk/tny-gtk-folder-list-store.c (deleter): fixes
+	removals of folder hierarchies
+
+	* libtinymail-camel/tny-camel-store-account.c
 	(foreach_managed_folder):
 	(tny_camel_store_account_remove_folder_actual): perform a
 	weak_unref when the account is disposed or the managed folder is
